--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <h2>Education</h2>
 
             <!-- School details: copy this whole block to add more schools. -->
-            <h3>School name, year you attended</h3>
-            <p>Designation received</p>
+            <h3>University of Washington Class of 2014</h3>
+            <p>Bachelors of Arts</p>
             
             <!-- Add as many paragraphs as you need. -->
             <p>Summary.</p>
