--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Job Details: copy this whole block to add more jobs -->
             <div class="col-narrow">
             <h3>Front-end Developer</h3>
-            <p>Independent/ Freelance</p>
+            <p class="uppercase">Independent/ Freelance</p>
             <p>April 2018- Present</p>
         </div>
 
