--- a/index.html
+++ b/index.html
@@ -28,26 +28,36 @@
 
             <!-- Job Details: copy this whole block to add more jobs -->
             <div class="col-narrow">
-            <h3>Front-end Developer</h3>
-            <p class="uppercase">Independent/ Freelance</p>
-            <p>April 2018- Present</p>
-        </div>
-
-            <div class="col-wide">
-
-
-
-            <!-- Add as many paragraphs as you need. -->
-            <p>Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
+                <h3>Front-end Developer</h3>
+                <p class="uppercase">Independent/ Freelance</p>
+                <p>April 2018- Present</p>
             </div>
-            <!-- This list can be deleted if you don't want to use it. -->
-            <p>Optional list:</p>
+            <div class="col-wide job-description">
+                <p>Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
+            <p>Key contributions:</p>
             <ul>
                 <li>Created...</li>
                 <li>Lead...</li>
                 <li>Responsible for</li>
             </ul>
+        </div>
             <!-- end of Job Details block. -->
+            <!-- Job 3 Details -->
+            <div class="col-narrow">
+                <h3>Lead Front-End Developer</h3>
+                <p class="uppercase">Field ID</p>
+                <p>March 2013-February 2014</p>
+            </div>
+            <div class="col-wide job-description">
+                <p>Lead the front-end development for in-house safety inspection software. Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
+            <p>Key contributions</p>
+            <ul>
+                    <li>Created...</li>
+                    <li>Lead...</li>
+                    <li>Responsible for</li>
+                </ul>
+                <p>See my complete work history on <a href=""></a></p>
+                </div>
             </div>
         </section>
 
@@ -57,7 +67,15 @@
             <div class="content-wrap">
             <h2>Education</h2>
 
-            <!-- School details: copy this whole block to add more schools. -->
+            <!-- School 1 details. -->
+            <h3>University of Washington Class of 2014</h3>
+            <p>Bachelors of Arts</p>
+
+             <!-- School 2 details.-->
+             <h3>University of Washington Class of 2014</h3>
+             <p>Bachelors of Arts</p>
+
+              <!-- School 3 details.-->
             <h3>University of Washington Class of 2014</h3>
             <p>Bachelors of Arts</p>
             
