--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>As a developer, I specialize in creating modular and scalable front-end architectures.</p>
          </div>
         </div>
-        <a href="resume-helen.pdf" download>Download PDF</a>
+        <a href="resume-helen.pdf" class="btn" download>Download PDF</a>
     </header>
     
     <main> 
