--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helen Do | Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link  rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -85,7 +86,15 @@
               <!-- School 3 details.-->
             <h3>University of Washington Class of 2014</h3>
             <p>Bachelors of Arts</p>
-            
+
+            <!-- School 3 details.-->
+            <h3>University of Washington Class of 2014</h3>
+            <p>Bachelors of Arts</p>
+
+            <!-- School 3 details.-->
+            <h3>University of Washington Class of 2014</h3>
+            <p>Bachelors of Arts</p>
+
             <!-- Add as many paragraphs as you need. -->
             <p>Summary.</p>
             <!-- End of school details. -->
@@ -100,11 +109,11 @@
         
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact-info">
-            <a href="mailto:helendo92@gmail.com">email</a>
-            <a href="http://yourwebsite.com" target="_blank">helendo.com</a>
-            <a href="http://instagram.com/helendo" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/helen-do-8a417893/" target="_blank">LinkedIn</a>
-            <a href="https://www.facebook.com/helendo92" target="_blank">Facebook</a>
+            <a href="mailto:helendo92@gmail.com"><i class="far fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span></a>
+            <a href="http://helendo92.github.io" target="_blank"><i class="far fa-file" aria-hidden="true"></i><span class="sr-only">Resume</span></a>
+            <a href="http://instagram.com/_dentalhygiene" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+            <a href="https://www.linkedin.com/in/helen-do-8a417893/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Linkedin</span></a>
+            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
         </div>
 
         <p>Copyright 2018 by Helen Do</p>
