--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helen Do | Resume</title>
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link  rel="stylesheet" href="css/styles.css">
 </head>
@@ -49,6 +49,20 @@
                 <li>Responsible for</li>
             </ul>
         </div>
+        <div class="col-narrow">
+                <h3>Front-end Developer</h3>
+                <p class="uppercase">Independent/ Freelance</p>
+                <p>April 2018- Present</p>
+            </div>
+            <div class="col-wide job-description">
+                <p>Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
+            <p>Key contributions:</p>
+            <ul>
+                <li>Created...</li>
+                <li>Lead...</li>
+                <li>Responsible for</li>
+            </ul>
+        </div>
             <!-- end of Job Details block. -->
             <!-- Job 3 Details -->
             <div class="col-narrow">
@@ -67,8 +81,8 @@
                 <p>See my complete work history on <a href=""></a></p>
                 </div>
             </div>
+              
         </section>
-
 
         <!-- // Education -->
         <section id= "education" class="education">
@@ -105,7 +119,7 @@
     <!-- // Footer & contact info -->
     <footer id="contact">
         <div class="content-wrap">
-        <h2>Let's Keep in Touch!</h2>
+        <h4>Let's Keep in Touch!</h4>
         
         <!-- Social media and contact links. Add or remove any networks. -->
         <div class="contact-info">
@@ -116,7 +130,7 @@
             <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
         </div>
 
-        <p>Copyright 2018 by Helen Do</p>
+        <h5>Copyright 2018 by Helen Do</h5>
         </div>
     </footer>
 </body>
