--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <!-- // Intro -->
     <header id="about">
+            <a href="resume-helen.pd" class="btn download" download>Download PDF</a>
             <nav>
                 <a href="#about">About</a>
                 <a href="#work">Work Experience</a>
@@ -18,14 +19,13 @@
                 <a href="#contact">Contact</a>
                   </nav>
         <div class="content-wrap">
-            <img class="profile-img col-narrow" src="images/photo.jpg" alt="Helen Do">
+            <img class="profile-img col-narrow" src="images/christina-truong.png" alt="Helen Do">
             <div class="col-wide">
             <h1>Helen Do</h1>
             <h2>Web Developer</h2>
             <p>As a developer, I specialize in creating modular and scalable front-end architectures.</p>
          </div>
         </div>
-        <a href="resume-helen.pdf" class="btn download" download>Download PDF</a>
     </header>
     
     <main> 
@@ -90,8 +90,8 @@
             <h2>Education</h2>
 
             <!-- School 1 details. -->
-            <h3>University of Washington Class of 2014</h3>
-            <p>Bachelors of Arts</p>
+            <h3>Webmaster Content Site Design Certificate, 2018</h3>
+            <p>14 week full-time program.</p>
 
              <!-- School 2 details.-->
              <h3>University of Washington Class of 2014</h3>
