--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Helen Do | Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="font-awesome-animation.min.css">
     <link  rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                 <a href="#contact">Contact</a>
                   </nav>
         <div class="content-wrap">
-            <img class="profile-img col-narrow" src="images/christina-truong.png" alt="Helen Do">
+            <img class="profile-img col-narrow" src="images/helen-do.png" width="200" height="200" alt="Helen Do">
             <div class="col-wide">
             <h1>Helen Do</h1>
             <h2>Web Developer</h2>
@@ -127,9 +128,9 @@
             <a href="http://helendo92.github.io" target="_blank"><i class="far fa-file" aria-hidden="true"></i><span class="sr-only">Resume</span></a>
             <a href="http://instagram.com/_dentalhygiene" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
             <a href="https://www.linkedin.com/in/helen-do-8a417893/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Linkedin</span></a>
-            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-        </div>
-
+            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook animated-hover" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+           
+            </div>
         <h5>Copyright 2018 by Helen Do</h5>
         </div>
     </footer>
