--- a/extras/dental.html
+++ b/extras/dental.html
@@ -6,8 +6,7 @@
     <title>Helen Do | Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" href="font-awesome-animation.min.css">
-    <link  rel="stylesheet" href="css/styles.css">
+    <link  rel="stylesheet" href="css/dental.css">
 </head>
 <body>
     <!-- // Intro -->
@@ -17,14 +16,13 @@
                 <a href="#about">About</a>
                 <a href="#work">Work Experience</a>
                 <a href="#education">Education</a>
-                <a href="#contact" title= "contact">Contact</a>
-                <a href="extras/dental.html" title= "extra">Extra</a>
+                <a href="#contact">Contact</a>
                   </nav>
         <div class="content-wrap">
-            <img class="profile-img col-narrow" src="images/helen-do.png" width="200" height="200" alt="Helen Do">
+            <img class="profile-img col-narrow" src="images/christina-truong.png" alt="Helen Do">
             <div class="col-wide">
             <h1>Helen Do</h1>
-            <h2>Web Developer</h2>
+            <h2>Registered Dental Hygienist</h2>
             <p>As a developer, I specialize in creating modular and scalable front-end architectures.</p>
          </div>
         </div>
@@ -38,23 +36,29 @@
 
             <!-- Job Details: copy this whole block to add more jobs -->
             <div class="col-narrow">
-                <h3>Front-end Developer</h3>
-                <p class="uppercase">Independent/ Freelance</p>
-                <p>April 2018- Present</p>
+                <h3>Neighborcare Health</h3>
+                <p class="uppercase">Dental Hygienist</p>
+                <p>June 2017- Present</p>
             </div>
             <div class="col-wide job-description">
-                <p>Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
-            <p>Key contributions:</p>
+                    <p>removing plaque from and polishing a patient's teeth during a routine checkup, screening patients, reviewing a patient's oral health history and teaching appropriate brushing and flossing techniques.</p>
+                <p>Key contributions:</p>
             <ul>
-                <li>Created...</li>
-                <li>Lead...</li>
-                <li>Responsible for</li>
+                <li>patient screening procedures; such as assessment of oral health conditions, review of the health history, oral cancer screening, head and neck inspection, dental charting and taking blood pressure and pulse</li>
+                <li>taking and developing dental radiographs (x-rays)</li>
+                <li>removing calculus and plaque (hard and soft deposits) from all surfaces of the teeth</li>
+                <li>applying preventive materials to the teeth (e.g., sealants and fluorides)</li>
+                <li>teaching patients appropriate oral hygiene strategies to maintain oral health;</li>
+                <li>(e.g., tooth brushing, flossing and nutritional counseling)</li>
+                <li>counseling patients about good nutrition and its impact on oral health</li>
+                <li>making impressions of patients' teeth for study casts (models of teeth used by dentists to evaluate patient treatment needs)</li>
+                <li>performing documentation and office management activities</li>
             </ul>
         </div>
         <div class="col-narrow">
-                <h3>Front-end Developer</h3>
-                <p class="uppercase">Independent/ Freelance</p>
-                <p>April 2018- Present</p>
+                <h3>Seattle Children's Odessa Brown</h3>
+                <p class="uppercase">Registered Dental Hygienist</p>
+                <p>June 2017- Present</p>
             </div>
             <div class="col-wide job-description">
                 <p>Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
@@ -64,26 +68,9 @@
                 <li>Lead...</li>
                 <li>Responsible for</li>
             </ul>
+            <p>See my complete work history on <a href=""></a></p>
         </div>
-            <!-- end of Job Details block. -->
-            <!-- Job 3 Details -->
-            <div class="col-narrow">
-                <h3>Lead Front-End Developer</h3>
-                <p class="uppercase">Field ID</p>
-                <p>March 2013-February 2014</p>
-            </div>
-            <div class="col-wide job-description">
-                <p>Lead the front-end development for in-house safety inspection software. Provides various front-end related services ranging from development work, consultations, speaking engagements, corporate training, workshops and online courses.</p>
-            <p>Key contributions</p>
-            <ul>
-                    <li>Created...</li>
-                    <li>Lead...</li>
-                    <li>Responsible for</li>
-                </ul>
-                <p>See my complete work history on <a href=""></a></p>
-                </div>
-            </div>
-              
+            <!-- end of Job Details block. -->      
         </section>
 
         <!-- // Education -->
@@ -92,24 +79,13 @@
             <h2>Education</h2>
 
             <!-- School 1 details. -->
-            <h3>Webmaster Content Site Design Certificate, 2018</h3>
-            <p>14 week full-time program.</p>
+            <h3>Seattle Central College Class of 2018</h3>
+            <p>Bachelor of Applied Science Dental Hygiene</p>
 
              <!-- School 2 details.-->
              <h3>University of Washington Class of 2014</h3>
              <p>Bachelors of Arts</p>
 
-              <!-- School 3 details.-->
-            <h3>University of Washington Class of 2014</h3>
-            <p>Bachelors of Arts</p>
-
-            <!-- School 3 details.-->
-            <h3>University of Washington Class of 2014</h3>
-            <p>Bachelors of Arts</p>
-
-            <!-- School 3 details.-->
-            <h3>University of Washington Class of 2014</h3>
-            <p>Bachelors of Arts</p>
 
             <!-- Add as many paragraphs as you need. -->
             <p>Summary.</p>
@@ -129,10 +105,10 @@
             <a href="http://helendo92.github.io" target="_blank"><i class="far fa-file" aria-hidden="true"></i><span class="sr-only">Resume</span></a>
             <a href="http://instagram.com/_dentalhygiene" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
             <a href="https://www.linkedin.com/in/helen-do-8a417893/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Linkedin</span></a>
-            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook animated-hover" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-           
-            </div>
-        <h5> &copy;2018 by Helen Do</h5>
+            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+        </div>
+
+        <h5>Copyright 2018 by Helen Do</h5>
         </div>
     </footer>
 </body>
