--- a/extras/dental.html
+++ b/extras/dental.html
@@ -6,20 +6,21 @@
     <title>Helen Do | Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link  rel="stylesheet" href="css/dental.css">
+    <link rel="stylesheet" href="../css/dental.css">
 </head>
 <body>
     <!-- // Intro -->
     <header id="about">
             <a href="resume-helen.pd" class="btn download" download>Download PDF</a>
             <nav>
+                <a href="../helendo.html" title= "Main Page">Main Page</a>
                 <a href="#about">About</a>
                 <a href="#work">Work Experience</a>
                 <a href="#education">Education</a>
                 <a href="#contact">Contact</a>
                   </nav>
         <div class="content-wrap">
-            <img class="profile-img col-narrow" src="images/christina-truong.png" alt="Helen Do">
+            <img class="profile-img col-narrow" src="../images/helen-do.png" alt="Helen Do">
             <div class="col-wide">
             <h1>Helen Do</h1>
             <h2>Registered Dental Hygienist</h2>
@@ -97,16 +98,6 @@
     <!-- // Footer & contact info -->
     <footer id="contact">
         <div class="content-wrap">
-        <h4>Let's Keep in Touch!</h4>
-        
-        <!-- Social media and contact links. Add or remove any networks. -->
-        <div class="contact-info">
-            <a href="mailto:helendo92@gmail.com"><i class="far fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span></a>
-            <a href="http://helendo92.github.io" target="_blank"><i class="far fa-file" aria-hidden="true"></i><span class="sr-only">Resume</span></a>
-            <a href="http://instagram.com/_dentalhygiene" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
-            <a href="https://www.linkedin.com/in/helen-do-8a417893/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i><span class="sr-only">Linkedin</span></a>
-            <a href="https://www.facebook.com/helendo92" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
-        </div>
 
         <h5>Copyright 2018 by Helen Do</h5>
         </div>
