--- a/extras/dental.html
+++ b/extras/dental.html
@@ -24,7 +24,7 @@
             <div class="col-wide">
             <h1>Helen Do</h1>
             <h2>Registered Dental Hygienist</h2>
-            <p>As a developer, I specialize in creating modular and scalable front-end architectures.</p>
+            <p>As a dental hygienist, I specialize in patient screening procedures.</p>
          </div>
         </div>
     </header>
