--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="content-wrap">
             <div class="col-wide">
             <h1>Helen Do</h1>
-            <h2>Dental Hygiene Student <center><p>&amp;</p></center>Web Developer</h2>
+            <h2>Dental Hygienist <center><p>&amp;</p></center>Web Developer</h2>
          </div>
         </div>
     </header>
