--- a/extras/shop.html
+++ b/extras/shop.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dental Hygienist</title>
+    <title>Helen Do Shop</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/dental.css">
+    <link rel="stylesheet" href="../css/shop.css">
     <link rel="SHORTCUT ICON" href="tooth.ico" type="image/x-icon" />
 </head>
 <body>
@@ -16,8 +16,8 @@
             <nav>
                 <a href="../index.html" title= "Main Page">Main Page</a>
                 <a href="#about">About</a>
-                <a href="#work">Work Experience</a>
-                <a href="#education">Education</a>
+                <a href="#Products">Products</a>
+                <a href="#blog">Blog</a>
                 <a href="#contact">Contact</a>
                   </nav>
         <div class="content-wrap">
@@ -32,9 +32,9 @@
     
     <main> 
         <!-- // Work Experience -->
-        <section id="work" class="work">
+        <section id="Products" class="Products">
             <div class="content-wrap">
-            <h2>Work Experience</h2>
+            <h2>Products</h2>
 
             <!-- Job Details: copy this whole block to add more jobs -->
             <div class="col-narrow">
@@ -75,10 +75,10 @@
             <!-- end of Job Details block. -->      
         </section>
 
-        <!-- // Education -->
-        <section id= "education" class="education">
+        <!-- // Blog -->
+        <section id= "blog" class="blog">
             <div class="content-wrap">
-            <h2>Education</h2>
+            <h2>Blog</h2>
 
             <!-- School 1 details. -->
             <h3>Seattle Central College Class of 2018</h3>
