--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="font-awesome-animation.min.css">
+    <link rel="SHORTCUT ICON" href="tooth.ico" type="image/x-icon" />
     <link  rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -15,6 +16,7 @@
             <nav>
                 <a href="extras/dental.html" title= "Dental Hygiene Student">Dental Hygiene</a>
                 <a href="extras/webdeveloper.html" title= "Web Developer">Web Developer</a>
+                <a href="extras/shop.html" title= "Shop">Shop</a>
                   </nav>
         <div class="content-wrap">
             <div class="col-wide">
