--- a/extras/dental.html
+++ b/extras/dental.html
@@ -14,7 +14,7 @@
     <header id="about">
             <a href="resume-helen.pd" class="btn download" download>Download PDF</a>
             <nav>
-                <a href="../index.html" title= "Main Page">Main Page</a>
+                <a id='mainPageLink' href="../index.html" title= "Main Page">Main Page</a>
                 <a href="#about">About</a>
                 <a href="#work">Work Experience</a>
                 <a href="#education">Education</a>
