--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helen Do | Resume</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Poppins" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="font-awesome-animation.min.css">
-    <link rel="SHORTCUT ICON" href="tooth.ico" type="image/x-icon" />
+    <!-- <link rel="SHORTCUT ICON" href="tooth.ico" type="image/x-icon" /> -->
     <link  rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -21,8 +21,10 @@
         <div class="content-wrap">
             <div class="col-wide">
             <h1>Helen Do</h1>
-            <h2>Dental Hygienist <center><p>&amp;</p></center>Web Developer</h2>
-         </div>
+            <h2>Dental Hygienist 
+            <p>&amp;</p>
+            <h2>Web Developer</h2>
+        </div>
         </div>
     </header>
     
